created models, routes, controllers - about to create views

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,5 +13,19 @@
  *= require_tree .
  *= require_self
  */
- @import "boostrap-sprockets";
- @import "bootstrap";
+  @import "boostrap-sprockets";
+
+
+  @import "config/variables";
+  @import "config/bootstrap_variables";
+
+  // External libraries
+  @import "bootstrap";
+  @import "font-awesome-sprockets";
+  @import "font-awesome";
+
+  // Your CSS
+  @import "layout/index";
+  @import "components/index";
+  @import "pages/index";
+  @import "vendor/index";
