--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,2 +1,17 @@
-<h1>Cocktails#index</h1>
-<p>Find me in app/views/cocktails/index.html.erb</p>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1>Welcome to Mister Cocktail</h1>
+      <p>Here is the list of our cocktails. Deliveries in Paris and near suburb.</p>
+
+      <%= link_to "Add a cocktail", new_cocktail_path, {class: "btn btn-primary"} %>
+
+      <% @cocktails.each do |cocktail| %>
+          <h3><i class="fa fa-glass"></i>  <%= cocktail.name.capitalize %></h3>
+          <%= link_to "+ infos", cocktail_path(cocktail) %>
+      <% end %>
+
+
+    </div>
+  </div>
+</div>
