--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,2 +1,16 @@
-<h1>Cocktails#new</h1>
-<p>Find me in app/views/cocktails/new.html.erb</p>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <h1>Add a cocktail</h1>
+      <p>Witch cocktail would you like to ask? </p>
+
+      <%= simple_form_for[@cocktail, @dose] do |f| %>
+        <%= f.error_notification %>
+        <%= f.input :name %>
+         <%= f.input :description %>
+        <%= f.button :submit, class: "btn btn-primary" %>
+      <% end %>
+
+    </div>
+  </div>
+</div>
