--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,14 +1,45 @@
-<div class="container text-center">
+<%= render "banner", cocktail: @cocktail.name %>
+<div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <h1><%= @cocktail.name.capitalize %></h1>
-      <p>Here are the ingredients you need to make a <%= @cocktail.name %>:</p>
-
-
-      <%= link_to "back", cocktails_path %>
-
-
-
+    <div class="col-xs-12 col-md-4 col-md-offset-2">
+      <h2 class="text-center"> Doses: </h2>
+      <ul class="list-group text-center list-unstyled">
+        <% @cocktail.doses.each do |dose|%>
+          <li>
+            <%= dose.description %>
+            <%= link_to "Delete", cocktail_dose_path(@cocktail, dose), :method => :delete %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+    <div class="col-xs-12 col-md-4">
+      <h2 class="text-center">  Ingredients: </h2>
+      <ul class="list-group text-center list-unstyled">
+        <% @cocktail.doses.each do |dose|%>
+          <li><%= dose.ingredient.name %></li>
+        <% end %>
+      </ul>
     </div>
   </div>
+  <hr>
+  <div class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
+    <h2> Add a dose to <%= @cocktail.name %></h2>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :ingredient_id, label: "Which ingredient?", collection: @ingredients %>
+      <%= f.input :description %>
+      <%= f.button :submit, class: "btn-primary"%>
+      </br>
+      </br>
+
+    <% end %>
+
+
+    <%= link_to "Home page", cocktails_path %>
+      </br>
+      </br>
+      </br>
+
+  </div>
 </div>
+
+
